--- a/Homemade_Cakes/package.json
+++ b/Homemade_Cakes/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@syncfusion/ej2-angular-buttons": "^27.1.48",
+    "@syncfusion/ej2-angular-grids": "^27.1.48",
+    "@syncfusion/ej2-angular-inputs": "^27.1.48",
     "@types/crypto-js": "^4.2.2",
     "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^5.3.3",
