--- a/Homemade_Cakes/angular.json
+++ b/Homemade_Cakes/angular.json
@@ -32,7 +32,8 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/slick-carousel/slick/slick.min.js"
+              "node_modules/slick-carousel/slick/slick.min.js",
+              "src/assets/scripts/login.js"
             ]
           },
           "configurations": {
